setting up a reuseable grid

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Omnifood</title>
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <img src="img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
       <nav class="main-nav">
@@ -26,6 +27,7 @@
       </nav>
     </header>
     <main>
+      <!-- Section Hero -->
       <section class="section-hero">
         <div class="hero">
           <div class="hero-text-box">
@@ -62,6 +64,15 @@
               class="hero-img"
             />
           </div>
+        </div>
+      </section>
+      <!-- Section How it works -->
+      <section class="section-how container grid grid--2-cols">
+        <div class="container grid grid--2-cols">
+          <div>Test 1</div>
+          <div>Test 2</div>
+          <div>Test 3</div>
+          <div>Test 4</div>
         </div>
       </section>
     </main>
