--- a/index.html
+++ b/index.html
@@ -559,13 +559,14 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form action="#" class="cta-form">
+              <form name="sign-up" class="cta-form" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
                     type="text"
                     id="full-name"
                     placeholder="John Smith"
+                    name="full-name"
                     required
                   />
                 </div>
@@ -575,12 +576,13 @@
                     type="email"
                     id="email"
                     placeholder="me@example.com"
+                    name="email"
                     required
                   />
                 </div>
                 <div>
                   <label for="select-where">Where did you hear from us ?</label>
-                  <select id="select-where" required>
+                  <select id="select-where" required name="select-where">
                     <option value="">Please choose one option:</option>
                     <option value="friends">Friends and Family</option>
                     <option value="youtube">Youtube Video</option>
